<resources>
    <string name="app_name">ISU ISIT Weather</string>
    <string name="enter_city_name">Enter city name:</string>
    <string name="hint_city_name">City name</string>
    <string name="get_weather_details">Get weather details!</string>
    <string name="error_tips">1. Check Internet connection\n2. Check that city with this name exists</string>
    <string name="try_again">Try again</string>
    <string name="city_lat_lon">latitude: %1$.3f, longitude: %2$.3f</string>
    <string name="sunrise_time">Sunrise time: %s UTC</string>
    <string name="night_temperature">Night temperature: %1$.1f</string>
    <string name="sunset_time">Sunset time: %s UTC</string>
    <string name="day_len">Day length: %s</string>
    <string name="day_temperature">Day temperature: %1$.1f</string>
    <string name="change_city">Change city</string>
    <string name="change_date">Change date</string>
    <string name="something_went_wrong">Something went wrong!</string>
</resources>