<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/linear_city_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_surface_block"
        android:elevation="30dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_city_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:text="London" />

        <TextView
            android:id="@+id/text_city_coordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/city_lat_lon"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_weather_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_surface_block"
        android:elevation="30dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_city_details">

        <TextView
            android:id="@+id/text_sunrise_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunrise_time"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_sunset_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sunset_time"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_day_len"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/day_len"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_day_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/day_temperature"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_night_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/night_temperature"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_change_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/change_city"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_weather_details" />
</androidx.constraintlayout.widget.ConstraintLayout>