<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/text_caption_enter_city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_city_name"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_city_name"
        app:layout_constraintTop_toBottomOf="@+id/text_caption_enter_city_name"
        tools:layout_editor_absoluteX="10dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/button_get_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_weather_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>